--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+boto3==1.24.28
+botocore==1.27.28
 confluent-kafka==1.9.0
 docopt==0.6.2
+jmespath==1.0.1
+python-dateutil==2.8.2
 pytz==2022.1
+s3transfer==0.6.0
+six==1.16.0
 stomp.py==8.0.1
+urllib3==1.26.10
