--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,63 @@
+agate==1.6.3
+attrs==21.4.0
+Babel==2.10.3
 boto3==1.24.28
 botocore==1.27.28
+cachetools==5.2.0
+certifi==2022.6.15
+cffi==1.15.1
+charset-normalizer==2.1.0
+click==8.1.3
+colorama==0.4.4
 confluent-kafka==1.9.0
+dbt-bigquery==1.1.1
+dbt-core==1.1.1
+dbt-extractor==0.4.1
 docopt==0.6.2
+future==0.18.2
+google-api-core==2.8.2
+google-auth==2.9.1
+google-cloud-bigquery==2.34.4
+google-cloud-core==2.3.1
+google-crc32c==1.3.0
+google-resumable-media==2.3.3
+googleapis-common-protos==1.56.4
+grpcio==1.47.0
+grpcio-status==1.47.0
+hologram==0.0.15
+idna==3.3
+isodate==0.6.1
+Jinja2==2.11.3
 jmespath==1.0.1
+jsonschema==3.2.0
+leather==0.3.4
+Logbook==1.5.3
+MarkupSafe==2.0.1
+mashumaro==2.9
+minimal-snowplow-tracker==0.0.2
+msgpack==1.0.4
+networkx==2.8.3
+packaging==21.3
+parsedatetime==2.4
+proto-plus==1.20.6
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pyparsing==3.0.9
+pyrsistent==0.18.1
 python-dateutil==2.8.2
+python-slugify==6.1.2
+pytimeparse==1.1.8
 pytz==2022.1
+PyYAML==6.0
+requests==2.28.1
+rsa==4.8
 s3transfer==0.6.0
 six==1.16.0
+sqlparse==0.4.2
 stomp.py==8.0.1
+text-unidecode==1.3
+typing_extensions==4.3.0
 urllib3==1.26.10
+Werkzeug==2.1.2
